--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
          <p> <h4> My name is Emmett and this is my page</h4></p>
 
-         <img src= "mia-baker-jjhvyxm34nY-unsplash.jpg" 
+         <img src= "./images/mia-baker-jjhvyxm34nY-unsplash.jpg" 
          height= 400
          alt="dramatic photo of workplace"> 
         
